# ttl

./: README.md
hsLists/: large.prof  tictaclogic.cabal  tictaclogic.prof
hsLists/app/: BasedOnLastChangeSolve.hs  Board.hs  Main.hs  ManualSolve.hs  ManualSolveWithChanged.hs  PrimitiveSolve.hs
hsVectors/: cabal.project  tictaclogic.cabal  tictaclogic.prof
hsVectors/app/: Board.hs  Main.hs  PrimitiveSolve.hs
ttl-rust/: Cargo.toml
ttl-rust/src/: basic_validate.rs  board.rs  field.rs  main.rs  simple_validate.rs  solve.rs  test_helpers.rs
