cabal-version:      3.0
name:               tictaclogic
version:            0.1.0.0

common warnings
    ghc-options:      -Wall

executable tictaclogic
    ghc-options:      -fprof-auto -threaded -rtsopts -with-rtsopts=-N
    main-is:          Main.hs
    other-modules:    PrimitiveSolve, BasedOnLastChangeSolve, Board, ManualSolve
    build-depends:    base, time, parallel
    hs-source-dirs:   app
    default-language: Haskell2010